# fcitx5-ai-suggest

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: build-optimization.md
src/: ThreadPool.cpp  ai.cpp  ai.h
